crates/sui-adapter-transactional-tests/tests/upgrade/type_names.exp
processed 12 tasks

init:
A: object(0,0)

task 1 'publish'. lines 6-17:
created: object(1,0), object(1,1)
mutated: object(0,0)
gas summary: computation_cost: 1000000, storage_cost: 6171200,  storage_rebate: 0, non_refundable_storage_fee: 0

task 2 'upgrade'. lines 19-30:
created: object(2,0)
mutated: object(0,0), object(1,1)
gas summary: computation_cost: 1000000, storage_cost: 6520800,  storage_rebate: 2595780, non_refundable_storage_fee: 26220

task 3 'upgrade'. lines 32-62:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpC6mq34:34:14
   │
34 │     use std::ascii;
   │              ^^^^^ Unused 'use' of alias 'ascii'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpC6mq34:35:14
   │
35 │     use std::type_name;
   │              ^^^^^^^^^ Unused 'use' of alias 'type_name'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpC6mq34:36:23
   │
36 │     use sui::object::{Self, UID};
   │                       ^^^^ Unused 'use' of alias 'object'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpC6mq34:37:14
   │
37 │     use sui::transfer;
   │              ^^^^^^^^ Unused 'use' of alias 'transfer'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpC6mq34:38:27
   │
38 │     use sui::tx_context::{Self, TxContext};
   │                           ^^^^ Unused 'use' of alias 'tx_context'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpC6mq34:38:33
   │
38 │     use sui::tx_context::{Self, TxContext};
   │                                 ^^^^^^^^^ Unused 'use' of alias 'TxContext'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpC6mq34:46:13
   │
46 │         let type = if (use_original) {
   │             ^^^^
   │             │
   │             Unexpected 'type'
   │             Expected a variable or struct name



task 4 'run'. lines 64-64:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 5 'run'. lines 66-66:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 6 'run'. lines 68-68:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 7 'run'. lines 70-70:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 8 'view-object'. lines 72-72:
Error: task 8, lines 72-72. Unbound fake id 4,0

task 9 'view-object'. lines 74-74:
Error: task 9, lines 74-74. Unbound fake id 5,0

task 10 'view-object'. lines 76-76:
Error: task 10, lines 76-76. Unbound fake id 6,0

task 11 'view-object'. lines 78-78:
Error: task 11, lines 78-78. Unbound fake id 7,0
